fleet/lib/opensearch-logging/overlays/ruka/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    cert-manager.io/cluster-issuer: letsencrypt
  name: logging-os-api
spec:
  rules:
  - host: opensearch.ruka.dev.lsst.org
    http:
      paths:
      - backend:
          service:
            name: logging-hot-nodes
            port:
              number: 9200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - opensearch.ruka.dev.lsst.org
    secretName: tls-logging-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: logging-os-dashboard
spec:
  rules:
  - host: opensearch.ruka.dev.lsst.org
    http:
      paths:
      - backend:
          service:
            name: logging-dashboards
            port:
              number: 5601
        path: /dashboard(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - opensearch.ruka.dev.lsst.org
    secretName: tls-logging-ingress
